Added "More" button

--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -2,13 +2,17 @@
 <HTML>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel="stylesheet" href="./css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
+        <link rel="stylesheet" href="../CSS/main.css">
         <title>Xiaomi Mi6 Showcase</title>
     </head>
     <body>
         <div class="header">
             <H1 class="welcome">Welcome to webpage about Xiaomi Mi6</H1>
+        </div>
+        <div class="more_button">
+            <a href="/more"><button>MORE</button></a>
         </div>
     </body>
 </HTML>
