Added Folder for Procedural programing basics

--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -12,7 +12,7 @@
             <H1 class="welcome">Welcome to webpage about Xiaomi Mi6</H1>
         </div>
         <div class="more_button">
-            <a href="/more"><button>MORE</button></a>
+            <a href="/more"><button class="more_button">MORE</button></a>
         </div>
     </body>
 </HTML>
