--- a/Metody tvorby multimedialneho obsahu/Cvicenia/Cvicenie1/Uloha3.html
+++ b/Metody tvorby multimedialneho obsahu/Cvicenia/Cvicenie1/Uloha3.html
@@ -10,7 +10,7 @@
             <p>Toto je paragraf ktoreho cast <small> je malym pismom </small> a <mark> druha je zvyraznena</mark> </p>
             <hr>
             <h3>Toto je nadpis 3 urovne</h3>
-            <p>Paragraf obsahujuci adresu <a href="www.google.com"> Google</a></p>
+            <p>Paragraf obsahujuci adresu <address>Ilkovičova 2, Bratislava </address></p>
             <pre>
                     Červené jabĺčko v oblôčku mám,
                     
