add Files 2nd lesson

--- a/Metody tvorby multimedialneho obsahu/Cvicenia/Cvicenie2/Uloha4.html
+++ b/Metody tvorby multimedialneho obsahu/Cvicenia/Cvicenie2/Uloha4.html
@@ -6,9 +6,11 @@
     </head>
     <body>
         <section>
-            <a href="http://www.fiit.sk">FIIT</a>
-            <a href="Uloha4_2.html">Druha stranka</a>
-            <a href="http://www.google.sk">Pre prepojenie na Google klikni</a>
+            <nav>
+                <a href="http://www.fiit.sk">FIIT</a>
+                <a href="Uloha4_2.html">Druha stranka</a>
+                <a href="http://www.google.sk">Pre prepojenie na Google klikni</a>
+            </nav>
         </section>
         <section> 
             <h2>Prvy nadpis 2 urovne</h2>
