Edit welcomepage and main css

--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -17,7 +17,18 @@
                 </li>         
                 <li><input class="searchbar" type="text" placeholder="&#x1F50E Search for your desired section" maxlength="10"></li>                       
             </ul>--->
-            
+            <ul>
+                    <li>
+                    <img class="logo" src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png" align="left" alt="Logo">
+                    </li>
+                    <li>
+                    <H1 class="logo_text">Xiaomi Mi6 </H1>
+                    </li>         
+                    <li id="searchbar_li">         <!-- pod 450px nastavit responzivitu -->
+                        <input class="searchbar" type="text" placeholder="&#x1F50E Search for your desired section" maxlength="10">
+                    </li>                       
+                </ul>
+
         </div>
         <div class="intro">
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non augue commodo, tempor massa quis, tristique est. Quisque blandit imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie. Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus elementum vel. Vestibulum quis efficitur nibh.</p>
