--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -1,18 +1,19 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <title>Xiaomi Mi6 Showcase</title>
-    
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../CSS/main.css" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
+    rel="stylesheet"
+  />
+  <title>Xiaomi Mi6 Showcase</title>
 </head>
 
 <body>
-    <div class="header">
-        <!--- <ul>
+  <div class="header">
+    <!--- <ul>
                 <li>
                 <img class="logo" src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png" align="left" alt="Logo">
                 </li>
@@ -21,78 +22,118 @@
                 </li>         
                 <li><input class="searchbar" type="text" placeholder="&#x1F50E Search for your desired section" maxlength="10"></li>                       
             </ul>--->
-        <ul>
-            <li>
-                <img class="logo" src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png" align="left" alt="Logo">
-            </li>
-            <li>
-                <H1 class="logo_text">Xiaomi Mi6 </H1>
-            </li>
-            <li id="searchbar_li">
-                <!-- pod 450px nastavit responzivitu -->
-                <input class="searchbar" type="text" placeholder="&#x1F50E Search for your desired section"
-                    maxlength="10">
-            </li>
-        </ul>
-
+    <ul>
+      <li>
+        <img
+          class="logo"
+          src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png"
+          align="left"
+          alt="Logo"
+        />
+      </li>
+      <li>
+        <H1 class="logo_text">Xiaomi Mi6 </H1>
+      </li>
+      <li id="searchbar_li">
+        <!-- pod 450px nastavit responzivitu -->
+        <input
+          class="searchbar"
+          type="text"
+          placeholder="Search for your desired section"
+          maxlength="10"
+        />
+      </li>
+    </ul>
+  </div>
+  <section class="Introduction">
+    <div class="intro">
+      <h2>Introduction</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu
+        vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
+        convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
+        augue commodo, tempor massa quis, tristique est. Quisque blandit
+        imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc pulvinar
+        tincidunt. Duis facilisis efficitur ligula tempor molestie. Nunc sit
+        amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus
+        elementum vel. Vestibulum quis efficitur nibh.
+      </p>
     </div>
-    <section class="Introduction">
-        <div class="intro">
-            <h2>Introduction</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu vestibulum sapien, vitae porta
-                enim. Sed volutpat nibh et nulla convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-                augue commodo, tempor massa quis, tristique est. Quisque blandit imperdiet maximus. Nullam fermentum
-                tellus leo, non tempor nunc pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie. Nunc
-                sit amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus elementum vel. Vestibulum quis
-                efficitur nibh.</p>
-        </div>
-    </section>
-    <section class="gallery">
-        <!-- Slideshow container -->
-        <div class="slideshow-container">
+  </section>
+  <section class="gallery">
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 2</div>
+        <img
+          id="slide"
+          src="../Pictures_DO_NOT_USE/xiaomi_photo.png"
+          style="width:auto"
+        />
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 2</div>
+        <img
+          id="slide"
+          src="../Pictures_DO_NOT_USE/mi6_back2.png"
+          style="width:auto"
+        />
+      </div>
 
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img src="../Pictures_DO_NOT_USE/xiaomi_photo.png" style="width:100%">
-                <div class="text">Frond Face</div>
-            </div>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br />
 
-            <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img src="../Pictures_DO_NOT_USE/xiaomi_photo.png" style="width:100%">
-                <div class="text">Side Face</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img src="../Pictures_DO_NOT_USE/xiaomi_photo.png" style="width:100%">
-                <div class="text">Back Face</div>
-            </div>
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-        <br>
-
-        <!-- The dots/circles -->
-        <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
-    </section>
-    <section class="Specs">
-        <div class="specs">
-            <h2>Specs</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu vestibulum sapien, vitae porta
-                    enim. Sed volutpat nibh et nulla convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-                    augue commodo, tempor massa quis, tristique est. Quisque blandit imperdiet maximus. Nullam fermentum
-                    tellus leo, non tempor nunc pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie. Nunc
-                    sit amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus elementum vel. Vestibulum quis
-                    efficitur nibh.</p>
-        </div>
-    </section>
-    <script src="../JAVASCRIPT/main.js"></script>
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+    </div>
+  </section>
+  <section class="Specs">
+    <div class="specs">
+      <h2>Specs</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu
+        vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
+        convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
+        augue commodo, tempor massa quis, tristique est. Quisque blandit
+        imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc pulvinar
+        tincidunt. Duis facilisis efficitur ligula tempor molestie. Nunc sit
+        amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus
+        elementum vel. Vestibulum quis efficitur nibh.
+      </p>
+    </div>
+  </section>
+  <section class="Compare">
+    <div class="compare">
+      <h2>Comparation</h2>
+      <ul>
+        <li>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
+            convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
+            augue commodo, tempor massa quis, tristique est. Quisque blandit
+            imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
+            pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
+            Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
+            imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
+          </p>
+        </li>
+        <li>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                  eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
+                  convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
+                  augue commodo, tempor massa quis, tristique est. Quisque blandit
+                  imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
+                  pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
+                  Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
+                  imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
+                </p>
+              </li>
+      </ul>
+    </div>
+  </section>
+  <script src="../JAVASCRIPT/main.js"></script>
 </body>
