Edit html css add photo

--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -13,21 +13,11 @@
 
 <body>
   <div class="header">
-    <!--- <ul>
-                <li>
-                <img class="logo" src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png" align="left" alt="Logo">
-                </li>
-                <li>
-                <H1 class="logo_text">Xiaomi Mi6 </H1>
-                </li>         
-                <li><input class="searchbar" type="text" placeholder="&#x1F50E Search for your desired section" maxlength="10"></li>                       
-            </ul>--->
     <ul>
       <li>
         <img
           class="logo"
           src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png"
-          align="left"
           alt="Logo"
         />
       </li>
@@ -107,32 +97,40 @@
   <section class="Compare">
     <div class="compare">
       <h2>Comparation</h2>
-      <ul>
-        <li>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-            eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
-            convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-            augue commodo, tempor massa quis, tristique est. Quisque blandit
-            imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
-            pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
-            Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
-            imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
-          </p>
-        </li>
-        <li>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                  eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
-                  convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-                  augue commodo, tempor massa quis, tristique est. Quisque blandit
-                  imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
-                  pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
-                  Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
-                  imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
-                </p>
-              </li>
-      </ul>
+      <div class="one">
+        <img
+          class="compare_photo1"
+          src="../Pictures_DO_NOT_USE/sm_5aff6089d3e02.png"
+          alt="No photo"
+        />
+        <p class="compare_text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
+          convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
+          augue commodo, tempor massa quis, tristique est. Quisque blandit
+          imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
+          pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
+          Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
+          imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
+        </p>
+      </div>
+      <div class="two">
+        <img
+          class="compare_photo2"
+          src="../Pictures_DO_NOT_USE/sm_5aff6089d3e02.png"
+          alt="No photo"
+        />
+        <p class="compare_text2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
+          convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
+          augue commodo, tempor massa quis, tristique est. Quisque blandit
+          imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
+          pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
+          Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
+          imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
+        </p>
+      </div>
     </div>
   </section>
   <script src="../JAVASCRIPT/main.js"></script>
