Edit js, htm,css

--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -50,7 +50,7 @@
       </p>
     </div>
   </section>
-  <section class="gallery">
+  <section class="Gallery">
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 2</div>
@@ -77,9 +77,13 @@
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
+      <br>
+      <form class="redirect" action="http://google.com">
+        <input class="button_redirect" type="submit" value="Specs" />
+      </form>
     </div>
   </section>
-  <section class="Specs">
+  <section id="Specs" class="Specs">
     <div class="specs">
       <h2>Specs</h2>
       <p>
@@ -92,6 +96,9 @@
         amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus
         elementum vel. Vestibulum quis efficitur nibh.
       </p>
+      <form class="redirect" action="http://google.com">
+        <input class="button_redirect" type="submit" value="Specs" />
+      </form>
     </div>
   </section>
   <section class="Compare">
@@ -131,6 +138,9 @@
           imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
         </p>
       </div>
+      <form class="redirect" action="http://google.com">
+        <input class="button_redirect" type="submit" value="Specs" />
+      </form>
     </div>
   </section>
   <script src="../JAVASCRIPT/main.js"></script>
