Upload to git all untracked files

--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -15,11 +15,13 @@
   <div class="header">
     <ul>
       <li>
-        <img
-          class="logo"
-          src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png"
-          alt="Logo"
-        />
+        <a href="./WelcomePage.html">
+          <img
+            class="logo dropbtn"
+            src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png"
+            alt="Logo"
+          />
+        </a>
       </li>
       <li>
         <H1 class="logo_text">Xiaomi Mi6 </H1>
@@ -35,18 +37,42 @@
       </li>
     </ul>
   </div>
+  <div class="dropdown">
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+
+  <!--
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+-->
+
   <section class="Introduction">
     <div class="intro">
       <h2>Introduction</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu
-        vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
-        convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-        augue commodo, tempor massa quis, tristique est. Quisque blandit
-        imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc pulvinar
-        tincidunt. Duis facilisis efficitur ligula tempor molestie. Nunc sit
-        amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus
-        elementum vel. Vestibulum quis efficitur nibh.
+        Xiaomi už niekoľko rokov medzi špičku vo výrobe smartphonov. Vďačí
+        hlavne veľmi dobrej kombinácií relatívne nizkej ceny a vysokého výkonu a
+        kvality spracovania. Smarphone Mi6 z modelovej rady Mi už síce nepatrí k
+        najnovším a ani k najvýkonejším avšak stále patrí medzi výkonné telefoný
+        Portál "gsmarena.com" hodnotí tento smartphone hodnotením 4.6/5 čo už
+        samo o sebe je výborne avšak tento portál ešte na konci dodáva "The Mi 6
+        succeeds where others would have likely failed, and not just on paper.
+        It has processing power to spare, one of the best designs, a very
+        credible camera, solid battery life, quality stereo sound" - Smartphone
+        Xiaomi Mi6 uspela tam kde by ostatní výrobcovia pravdepodobne zlyhali, a
+        to nielen na papiery. Výkonu má na rozdávanie, jeden s najlepších
+        dizajnov, dosť uspokojivú kameru, dlhú výdrž bateríe a kvalitný stereo
+        zvuk
       </p>
     </div>
   </section>
@@ -56,7 +82,7 @@
         <div class="numbertext">1 / 2</div>
         <img
           id="slide"
-          src="../Pictures_DO_NOT_USE/xiaomi_photo.png"
+          src="../Pictures_CAN_USE/FrontSide_1.png"
           style="width:auto"
         />
       </div>
@@ -64,7 +90,7 @@
         <div class="numbertext">2 / 2</div>
         <img
           id="slide"
-          src="../Pictures_DO_NOT_USE/mi6_back2.png"
+          src="../Pictures_CAN_USE/BackSide_1.png"
           style="width:auto"
         />
       </div>
@@ -77,28 +103,17 @@
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
-      <br>
-      <form class="redirect" action="http://google.com">
-        <input class="button_redirect" type="submit" value="Specs" />
-      </form>
     </div>
   </section>
   <section id="Specs" class="Specs">
     <div class="specs">
       <h2>Specs</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu
-        vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
-        convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-        augue commodo, tempor massa quis, tristique est. Quisque blandit
-        imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc pulvinar
-        tincidunt. Duis facilisis efficitur ligula tempor molestie. Nunc sit
-        amet velit lectus. Aenean accumsan neque sapien, quis imperdiet metus
-        elementum vel. Vestibulum quis efficitur nibh.
+        Xiaomi Mi6 poháňa výkonný ale už trochu starý chipset od známej firmy Qualcomm - Snapdragon 835 a grafický akcelerátor Adreno 540.
+        K tomu je príjemným potešením pamäť RAM o velkosti 6GB.
+        Displej s technológiou IPS nemá síce najvyššíe rozlíšenie (len 1080p - fullHD) avšak môže sa pochváliť velmi verným reprezentovaním farieb a vysokým dynamickým rozsahom.
+        <a href="./Specs.html">Read more</a>
       </p>
-      <form class="redirect" action="http://google.com">
-        <input class="button_redirect" type="submit" value="Specs" />
-      </form>
     </div>
   </section>
   <section class="Compare">
@@ -111,14 +126,8 @@
           alt="No photo"
         />
         <p class="compare_text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-          eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
-          convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-          augue commodo, tempor massa quis, tristique est. Quisque blandit
-          imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
-          pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
-          Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
-          imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
+          AUTOMATICKY GENEROVANY TEXT PRE POROVNAVANIE
+          <a href="./">Read more</a>
         </p>
       </div>
       <div class="two">
@@ -128,19 +137,49 @@
           alt="No photo"
         />
         <p class="compare_text2">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-          eu vestibulum sapien, vitae porta enim. Sed volutpat nibh et nulla
-          convallis, ut mattis lorem aliquet. Vivamus a pretium eros. Nam non
-          augue commodo, tempor massa quis, tristique est. Quisque blandit
-          imperdiet maximus. Nullam fermentum tellus leo, non tempor nunc
-          pulvinar tincidunt. Duis facilisis efficitur ligula tempor molestie.
-          Nunc sit amet velit lectus. Aenean accumsan neque sapien, quis
-          imperdiet metus elementum vel. Vestibulum quis efficitur nibh.
+          AUTOMATICKY GENEROVANY TEXT PRE POROVNAVANIE
+          <a href="./">Read more</a>
         </p>
       </div>
-      <form class="redirect" action="http://google.com">
-        <input class="button_redirect" type="submit" value="Specs" />
-      </form>
+    </div>
+  </section>
+  <section class="UI">
+    <div class="ui">
+      <h2>User Interface</h2>
+      <div class="ui_picture_div">
+        <a href="./">
+          <img
+            class="ui_picture"
+            src="../Pictures_CAN_USE/Screenshot_2019-10-17-11-48-43-104_com.miui.home.jpg"
+            alt=""
+          />
+        </a>
+      </div>
+    </div>
+  </section>
+  <section class="Discussion">
+    <div class="discussion">
+      <h2>Have a problem?</h2>
+      <div class="discussion_content">
+        <p>
+          Enter your comment:
+        </p>
+        <textarea
+          class="input comment"
+          name="comment"
+          id=""
+          cols="30"
+          rows="10"
+          form="discussion_form"
+          required
+        >
+        </textarea>
+        <form action="" method="get" id="discussion_form">
+          <p>Enter your name:</p>
+          <input class="input" type="text" name="name" required /> <br />
+          <input class="input button_redirect" type="submit" />
+        </form>
+      </div>
     </div>
   </section>
   <script src="../JAVASCRIPT/main.js"></script>
