--- a/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
+++ b/Metody tvorby multimedialneho obsahu/HTML/WelcomePage.html
@@ -18,7 +18,7 @@
         <a href="./WelcomePage.html">
           <img
             class="logo dropbtn"
-            src="../Pictures_DO_NOT_USE/1024px-Xiaomi_logo.svg.png"
+            src="../Pictures_CAN_USE/xiaomi_logo.svg.png"
             alt="Logo"
           />
         </a>
@@ -79,7 +79,6 @@
   <section class="Gallery">
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <div class="numbertext">1 / 2</div>
         <img
           id="slide"
           src="../Pictures_CAN_USE/FrontSide_1.png"
@@ -87,23 +86,14 @@
         />
       </div>
       <div class="mySlides fade">
-        <div class="numbertext">2 / 2</div>
         <img
           id="slide"
           src="../Pictures_CAN_USE/BackSide_1.png"
           style="width:auto"
         />
       </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <br />
-
-    <div style="text-align:center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-    </div>
+    <br>
   </section>
   <section id="Specs" class="Specs">
     <div class="specs">
@@ -147,7 +137,7 @@
     <div class="ui">
       <h2>User Interface</h2>
       <div class="ui_picture_div">
-        <a href="./">
+        <a href="./UI.html">
           <img
             class="ui_picture"
             src="../Pictures_CAN_USE/Screenshot_2019-10-17-11-48-43-104_com.miui.home.jpg"
