--- a/LS-2020/Základy tvorby interaktívnych aplikácií/Projekt/HTML/index.html
+++ b/LS-2020/Základy tvorby interaktívnych aplikácií/Projekt/HTML/index.html
@@ -5,6 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+    <script type="text/javascript " src="../JS/script.js"></script>
+    <script type="text/javascript " src="../JS/Model/arena.js"></script>
+    <script type="text/javascript " src="../JS/Model/button.js"></script>
+    <script type="text/javascript " src="../JS/Model/deleteBtns.js"></script>
+    <script type="text/javascript " src="../JS/Model/muteAudio.js"></script>
+    <script type="text/javascript " src="../JS/Model/playNeonWarriorChapter.js"></script>
+    <script type="text/javascript " src="../JS/Model/saveScore.js"></script>
+    <script type="text/javascript " src="../JS/Model/stickman.js"></script>
+    <script type="text/javascript " src="../JS/View/displayAchievement.js"></script>
+    <script type="text/javascript " src="../JS/View/displayScore.js"></script>
+    <script type="text/javascript " src="../JS/View/drawCountdown.js"></script>
+    <script type="text/javascript " src="../JS/View/drawGameOver.js"></script>
+    <script type="text/javascript " src="../JS/View/drawChapterSelect.js"></script>
+    <script type="text/javascript " src="../JS/View/drawMainMenu.js"></script>
+    <script type="text/javascript " src="../JS/View/drawPauseMenu.js"></script>
+    <script type="text/javascript " src="../JS/View/drawTurotial.js"></script>
+    <script type="text/javascript " src="../JS/View/playAudio.js"></script>
+    <script type="text/javascript " src="../JS/View/playSound.js"></script>
+    <script type="text/javascript " src="../JS/Controller/eventHandlers.js"></script>
+    <script type="text/javascript " src="../JS/Controller/startUpdating.js"></script>
+    <script type="text/javascript " src="../JS/Controller/stopUpdating.js"></script>
+    <script type="text/javascript " src="../JS/Controller/stopGame.js"></script>
+    <script type="text/javascript " src="../JS/Controller/updateGameArea.js"></script>
     <title>Neon Warior</title>
 </head>
 
@@ -12,13 +35,13 @@
     <div id="myModal" class="modal">
 
         <!-- Modal content -->
-        <div class="modal-content">
+        <div class="modal-content" id="modal">
             <span class="close">&times;</span>
             <p></p>
         </div>
 
     </div>
 </body>
-<script type="text/javascript " src="../JS/script.js"></script>
+
 
 </html>
